--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "~1.3.15",
     "hammer.js": "~2.0.4",
     "velocity": "~1.2.2",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angular-route": "~1.3.15"
   }
 }
