--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "hammer.js": "~2.0.4",
     "velocity": "~1.2.2",
     "bootstrap": "~3.3.4",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "gmaps.js": "~0.4.17"
   }
 }
