--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "velocity": "~1.2.2",
     "bootstrap": "~3.3.4",
     "angular-route": "~1.3.15",
-    "gmaps.js": "~0.4.17"
+    "gmaps.js": "~0.4.17",
+    "gmaps": "~0.4.17"
   }
 }
