--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "bootstrap": "~3.3.4",
     "angular-route": "~1.3.15",
     "gmaps.js": "~0.4.17",
-    "gmaps": "~0.4.17"
+    "gmaps": "~0.4.17",
+    "jquery": "~2.1.3"
   }
 }
